--- a/styles/[id].module.scss
+++ b/styles/[id].module.scss
@@ -82,11 +82,11 @@
 
       .detail {
         grid-area: detail;
-        max-height: 200px;
-        overflow: scroll;
         width: 100%;
+        max-height: 200px;
         padding: 0.8rem;
         line-height: 1.8;
+        overflow: scroll;
 
         p {
           margin: 0;
@@ -251,11 +251,9 @@
     .barrelMain,
     .bottleMain,
     .cocktailMain {
-      // 💎💎💎💎💎💎💎💎💎💎
       background-size: 100%;
       background-position: top;
       background-repeat: repeat-y;
-      // 💎💎💎💎💎💎💎💎💎💎
 
       main {
         width: 80%;
@@ -267,45 +265,24 @@
             "image"
             "detail"
             / 1fr;
-          width: 100%;
 
           .title {
             grid-area: title;
             padding: 0.8rem 0;
-            font-size: 1.3rem;
-            width: 100%;
           }
 
           .aboutBox {
-            flex-direction: column;
-            padding: 0.8rem 0;
             grid-area: about;
+            padding: 0.8rem 0;
+            flex-direction: column;
 
             .price {
               margin: 0 0 1.6rem;
-              font-size: 1rem;
-              font-size: 0.9rem;
-            }
-
-            .product {
-              p {
-                margin: 0;
-                font-size: 0.9rem;
-                font-size: 0.85rem;
-              }
-            }
-          }
-
-          .detail {
-            grid-area: detail;
-            p {
-              font-size: 0.9rem;
             }
           }
         }
+
         .image {
-          grid-area: image;
-          width: 100%;
           height: 200px;
         }
       }
@@ -326,11 +303,12 @@
   }
 }
 
+// 🔥cocktailのタイトルが2列表示に変わる🔥
+
 @media screen and (max-width: 600px) {
   .body {
     .pageTitleCocktail {
       flex-direction: column;
-      padding: 0;
       padding: 1rem 0;
 
       h1:nth-child(1) {
@@ -350,8 +328,6 @@
     }
   }
 }
-
-// 🔥1列表示に変更🔥
 
 @media screen and (max-width: 520px) {
   .body {
@@ -522,7 +498,6 @@
       main {
         .box {
           .title {
-            padding: 0.8rem 0;
             font-size: 0.8rem;
           }
 
